<resources>
    <string name="app_name">Due Date</string>

    <string name="home_title">Home Fragment</string>
    <string name="display_schedules_title">Current Schedules</string>
    <string name="add_new_timer_title">Add New Schedule</string>
    <string name="digital_clock_placeholder_text">00:00</string>
    <string name="digital_date_placeholder_text">Jan 01 2017 00:00</string>
    <string name="edit_symbol">+</string>
    <string name="time_percentage_placeholder_text">100%</string>
    <string name="current_date_subtitle">Start Date</string>
    <string name="target_date_subtitle">Target Date</string>

    <!--Selection Type Pager Titles-->
    <string name="selection_picker_title">Manual</string>
    <string name="selection_calendar_title">Calendar</string>
    <string name="selected_date_placeholder">MMMMM dd YYYY HH:mm</string>
    <string name="add_date_number_picker_title">Manual</string>
    <string name="add_date_calendar_title">Calendar</string>
    <string name="add_time_calendar_title">Clock</string>

    <string name="select_the_date_subtitle">Select Date and Time:</string>
    <string name="set_date">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set_timer">Set Timer</string>

    <!--Menu Titles-->
    <string name="menu_add_title">Add New Schedule</string>
    <string name="menu_settings">Additional Settings</string>

    <!--Settings Strings-->
    <string name="settings_contact_info">If you have any questions or issues you would like to report, please e-mail use at </string>
    <string name="settings_email_address">jyclapps@gmail.com</string>

</resources>
