<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <!--<AnalogClock-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="match_parent" />-->

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/analog_clock_image"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_light"/>

            <TextView
                android:id="@+id/percentage_time_passed"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/time_percentage_placeholder_text"
                android:layout_margin="20dp"/>


        </RelativeLayout>




        <!--<TextClock-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent" />-->

        <TextView
            android:id="@+id/time_digital"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"

            android:layout_marginRight="15dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/digital_clock_placeholder_text"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textSize="50sp"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/edit_symbol"/>


    </LinearLayout>
</LinearLayout>