<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Date"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"/>


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginEnd="24dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/date_display_background"/>

    <TextView
        android:id="@+id/selected_date_start"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:textColor="@android:color/holo_blue_light"
        android:text="@string/selected_date_placeholder"
        android:gravity="center"
        android:textSize="24sp"/>

    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/add_start_date_number_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_date_number_picker_title"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/add_start_date_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_date_calendar_title"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/add_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_time_calendar_title"
            android:layout_weight="0.5"/>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End Date"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/date_display_background"/>

        <TextView
            android:id="@+id/selected_date_end"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/selected_date_placeholder"
            android:gravity="center"
            android:textSize="24sp"/>


    </RelativeLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center">

        <Button
            android:id="@+id/add_end_date_number_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_date_number_picker_title"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/add_end_date_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_date_calendar_title"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/add_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_time_calendar_title"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_timer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/set_timer" />

</LinearLayout>