<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="match_parent">


            <View
                android:id="@+id/analog_clock_image"
                android:layout_alignParentBottom="true"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_light"/>

            <!--<ImageView-->
                <!--android:id="@+id/analog_clock_image"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_width="80dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@android:color/holo_blue_light"/>-->

            <TextView
                android:id="@+id/percentage_time_passed"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/time_percentage_placeholder_text"
                android:layout_margin="20dp"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            >

            <RelativeLayout
                android:id="@+id/current_time_placeholder"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">


                <!--android:layout_marginRight="36dp"-->
                <!--android:layout_marginEnd="36dp"-->

                <!--android:layout_marginTop="16dp"-->

                <!--<TextView-->
                    <!--android:id="@+id/time_start"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_marginLeft="8dp"-->
                    <!--android:layout_marginStart="8dp"-->
                    <!--android:layout_alignParentTop="true"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_alignParentStart="true"-->

                    <!--android:gravity="center_vertical"-->
                    <!--android:text="@string/digital_date_placeholder_text"-->
                    <!--android:textSize="18sp" />-->

                <!--<TextView-->
                    <!--android:id="@+id/time_start_subtitle"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->

                    <!--android:layout_alignRight="@id/time_start"-->
                    <!--android:layout_alignEnd="@id/time_start"-->
                    <!--android:layout_alignParentBottom="true"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_alignParentEnd="true"-->

                    <!--android:textColor="@android:color/darker_gray"-->
                    <!--android:text="@string/current_date_subtitle"-->
                    <!--android:textSize="14sp" />-->

                <TextView
                    android:id="@+id/time_start"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"

                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/digital_date_placeholder_text"
                    android:textSize="18sp" />


                <!--android:layout_toEndOf="@id/time_start_subtitle"-->
                <!--android:layout_toRightOf="@id/time_start_subtitle"-->

                <TextView
                    android:id="@+id/time_start_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/current_date_subtitle"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/end_time_placeholder"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_below="@id/current_time_placeholder">

                <!--android:layout_marginRight="36dp"-->
                <!--android:layout_marginEnd="36dp"-->

                <!--android:layout_marginBottom="16dp"-->

                <TextView
                    android:id="@+id/time_end"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"

                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/digital_date_placeholder_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/time_end_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/target_date_subtitle"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

            </RelativeLayout>

            <!--<View-->
                <!--android:layout_width="1dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:background="@android:color/holo_blue_light"-->
                <!--android:layout_below="@id/current_time_placeholder"-->
                <!--android:layout_alignRight="@id/end_time_placeholder"-->
                <!--android:layout_alignEnd="@id/end_time_placeholder" />-->


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_blue_light"
                android:layout_alignBottom="@id/current_time_placeholder"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/holo_blue_dark"
                android:layout_alignTop="@id/current_time_placeholder"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/holo_blue_dark"
                android:layout_alignBottom="@id/end_time_placeholder"/>

            <!--<View-->
                <!--android:layout_width="1dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:background="@android:color/holo_blue_light"-->
                <!--android:layout_alignBottom="@id/current_time_placeholder"/>-->

        </RelativeLayout>


        <Button
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="..."/>

    </LinearLayout>

</LinearLayout>